Twenty Fifteen: prevent jumping on hover in blog footer links with Safari
Props iamtakashi, fixes #30654.


Built from https://develop.svn.wordpress.org/trunk@30803


git-svn-id: http://core.svn.wordpress.org/trunk@30793 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentyfifteen/style.css
+++ b/wp-content/themes/twentyfifteen/style.css
@@ -1862,6 +1862,7 @@ a.post-thumbnail:focus {
 }
 
 .entry-footer a {
+	border-bottom: 1px solid transparent;
 	color: #707070;
 	color: rgba(51, 51, 51, 0.7);
 }
